--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     // HTTP client.
     def retrofitVersion = "2.9.0"
     def okhttpVersion = '4.9.0'
@@ -56,13 +56,26 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
     // AndroidX.
     def lifecycleVersion = "2.4.0-alpha03"
+    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
-    implementation "androidx.activity:activity-ktx:1.4.0-alpha01"
+    implementation "androidx.activity:activity-ktx:1.4.0-beta01"
     // Image loading.
     def glideVersion = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     // View binding helper.
     implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.4"
+    // Video player
+    def exoPlayerVersion = "2.15.0"
+    //noinspection GradleDependency
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoPlayerVersion"
+    //noinspection GradleDependency
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoPlayerVersion"
+    // RecyclerView adapter delegates.
+    // https://github.com/sockeqwe/AdapterDelegates
+    def adapterDelegatesVersion = '4.3.0'
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapterDelegatesVersion"
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:$adapterDelegatesVersion"
 }
