--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,12 @@ dependencies {
     def adapterDelegatesVersion = '4.3.0'
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapterDelegatesVersion"
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:$adapterDelegatesVersion"
+    // Navigation.
+    def navigationVersion = "2.4.0-alpha09"
+    //noinspection GradleDependency
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    //noinspection GradleDependency
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+    // Logger.
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
