--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,19 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            outputFileName = "ibatov-${variant.versionName}-${variant.buildType.name}.apk"
+        }
+    }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     // HTTP client.
     def retrofitVersion = "2.9.0"
     def okhttpVersion = '4.9.0'
@@ -60,7 +66,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
-    implementation "androidx.activity:activity-ktx:1.4.0-beta01"
+    implementation "androidx.activity:activity-ktx:1.4.0"
     // Image loading.
     def glideVersion = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
@@ -86,4 +92,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
     // Logger.
     implementation "com.jakewharton.timber:timber:4.7.1"
+    // System insets handling.
+    // https://chrisbanes.github.io/insetter
+    // https://github.com/chrisbanes/insetter
+    implementation "dev.chrisbanes.insetter:insetter:0.6.0"
 }
