finally it works!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -13,6 +14,9 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
+        // TODO: Прописать адрес нашего сервера.
+        buildConfigField "String", "BACKEND_API_URL", '""'
     }
 
     buildTypes {
@@ -22,13 +26,44 @@ android {
         }
     }
 
+    flavorDimensions "deployment-environment"
+
+    productFlavors {
+        mock {
+            dimension "deployment-environment"
+            applicationIdSuffix ".mock"
+            versionNameSuffix ".mock"
+            buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'true'
+        }
+        dev {
+            dimension "deployment-environment"
+            applicationIdSuffix ".dev"
+            versionNameSuffix ".dev"
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+        stage {
+            dimension "deployment-environment"
+            applicationIdSuffix ".stage"
+            versionNameSuffix ".stage"
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+        prod {
+            dimension "deployment-environment"
+            versionNameSuffix ".prod"
+            // Despite the default config, all the variables are specified explicitly here,
+            // because this product flavor is the most sensitive to errors.
+            buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+    }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
     buildFeatures {
@@ -41,6 +76,15 @@ android {
         }
     }
 }
+
+kapt {
+    correctErrorTypes true
+}
+
+hilt {
+    enableAggregatingTask = true
+}
+
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -96,4 +140,11 @@ dependencies {
     // https://chrisbanes.github.io/insetter
     // https://github.com/chrisbanes/insetter
     implementation "dev.chrisbanes.insetter:insetter:0.6.0"
+    // https://github.com/haroldadmin/NetworkResponseAdapter.
+    implementation "com.github.haroldadmin:NetworkResponseAdapter:4.2.2"
+    // Dependency injection.
+    def hiltVersion = "2.38.1"
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
 }
