--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,4 +147,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-compiler:$hiltVersion"
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
