add profile screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
-        // TODO: Прописать адрес нашего сервера.
-        buildConfigField "String", "BACKEND_API_URL", '""'
+        buildConfigField "String", "BACKEND_API_URL", '"https://android-course-backend.herokuapp.com"'
     }
 
     buildTypes {
@@ -39,21 +38,17 @@ android {
             dimension "deployment-environment"
             applicationIdSuffix ".dev"
             versionNameSuffix ".dev"
-            buildConfigField "String", "BACKEND_API_URL", '""'
         }
         stage {
             dimension "deployment-environment"
             applicationIdSuffix ".stage"
             versionNameSuffix ".stage"
-            buildConfigField "String", "BACKEND_API_URL", '""'
         }
         prod {
             dimension "deployment-environment"
             versionNameSuffix ".prod"
             // Despite the default config, all the variables are specified explicitly here,
             // because this product flavor is the most sensitive to errors.
-            buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
-            buildConfigField "String", "BACKEND_API_URL", '""'
         }
     }
 
@@ -155,4 +150,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
+
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:1.1.0'
 }
